--- a/assets/scss/layout/pages/_features.scss
+++ b/assets/scss/layout/pages/_features.scss
@@ -75,7 +75,7 @@
             position: absolute;
             height: 300px;
             width: 300px;
-            background: linear-gradient(0deg, #efe018 0%, var(--tp-theme-1) 100%);
+            background: linear-gradient(0deg, var(--yellow) 0%, var(--tp-theme-1) 100%);
             bottom: -157px;
             right: -141px;
             border-radius: 50%;
