--- a/assets/scss/layout/pages/_slider.scss
+++ b/assets/scss/layout/pages/_slider.scss
@@ -77,7 +77,7 @@
     &__angle-shape {
         height: 391px;
         width: 280px;
-        background: linear-gradient(to bottom, var(--tp-theme-1), #fbd403);
+        background: linear-gradient(to bottom, var(--tp-theme-1), var(--yellow));
         opacity: .7;
         position: absolute;
         bottom: 0;
